--- a/src/test/java/app/recursos/app.properties
+++ b/src/test/java/app/recursos/app.properties
@@ -4,6 +4,6 @@ nroCuenta=154086
 contraseña=2317
 
 #DataDriven
-urlExcel=C:\\Users\\JOSE\\IdeaProjects\\TrabajoPOM_Saez\\src\\test\\java\\app\\recursos\\Data.xlsx
-sheetname=Data
+excelURL=C:\\Users\\JOSE\\IdeaProjects\\TrabajoPOM_Saez\\src\\test\\java\\app\\recursos\\Data.xlsx
+nombreHoja=Data
 tituloTC=IDCasosDePrueba
